<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.quiz.fragments.SeekAnsFragment"
                                                   android:id="@+id/frameLayout">

	<ImageView
			android:id="@+id/frag-sds-mini-logo"
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:layout_centerInParent="true"
			android:contentDescription="@null"
			android:src="@drawable/sds"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"/>

	<TextView
			android:id="@+id/frag-title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sds_title_short"
			android:textColor="@color/dark_color"
			android:textSize="25sp"
			android:textStyle="bold"
			app:layout_constraintTop_toTopOf="@+id/frag-sds-mini-logo"
			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo"
			android:layout_marginStart="8dp"/>

	<TextView
			android:id="@+id/frag-title-desc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/frag-title"
			android:text="@string/sds_title_long"
			android:textColor="@color/dark_color"
			android:textSize="15sp"
			app:layout_constraintTop_toBottomOf="@+id/frag-title"
			app:layout_constraintBottom_toBottomOf="@+id/frag-sds-mini-logo"
			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo" android:layout_marginStart="8dp"/>


    <TextView
		    android:id="@+id/frag-question"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/question"
		    android:textAlignment="center"
		    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
		    android:textColor="@android:color/black"
		    android:textStyle="bold"
		    app:layout_constraintLeft_toLeftOf="parent"
		    app:layout_constraintRight_toRightOf="parent"
		    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
		    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
		    app:layout_constraintTop_toBottomOf="@+id/frag-title-desc" app:layout_constraintVertical_bias="0.069"/>


    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0"
            android:id="@+id/seekBar_widget" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/frag-question"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/seekBar_widget"
            app:layout_constraintHorizontal_bias="0.488"/>

</androidx.constraintlayout.widget.ConstraintLayout>