<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/linearLayout2"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">


	<ImageView
			android:id="@+id/frag-sds-mini-logo"
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:layout_centerInParent="true"
			android:contentDescription="@null"
			android:src="@drawable/sds"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"/>

	<TextView
			android:id="@+id/frag-title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sds_title_short"
			android:textColor="@color/dark_color"
			android:textSize="25sp"
			android:textStyle="bold"
			app:layout_constraintTop_toTopOf="@+id/frag-sds-mini-logo"
			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo"
			android:layout_marginStart="8dp"/>

	<TextView
			android:id="@+id/frag-title-desc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/frag-title"
			android:text="@string/sds_title_long"
			android:textColor="@color/dark_color"
			android:textSize="15sp"
			app:layout_constraintTop_toBottomOf="@+id/frag-title"
			app:layout_constraintBottom_toBottomOf="@+id/frag-sds-mini-logo"
			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo" android:layout_marginStart="8dp"/>


	<TextView
			android:id="@+id/frag-question"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/question"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Display1"
			android:textColor="@android:color/black"
			android:textStyle="bold"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/frag-title-desc" app:layout_constraintVertical_bias="0.069"/>

	<RadioGroup
			android:id="@+id/radioGroup"
			android:layout_width="338dp"
			android:layout_height="184dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.14"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/frag-question"
			app:layout_constraintVertical_bias="0.234">

		<RadioButton
				android:id="@+id/optionButton1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="yes"
				android:textAppearance="@style/TextAppearance.AppCompat.Display1"
				tools:layout_editor_absoluteX="34dp"
				tools:layout_editor_absoluteY="201dp" />

		<RadioButton
				android:id="@+id/optionButton2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="no"
				android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

		<RadioButton
				android:id="@+id/optionButton3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="RadioButton"
				android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
		/>

		<RadioButton
				android:id="@+id/optionButton4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="RadioButton"
				android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
		/>

	</RadioGroup>




</androidx.constraintlayout.widget.ConstraintLayout>